# minecraftC-lib

./: .gitignore  CMakeLists.txt  MinecraftC.cpp  README.md
api/: Std.hpp
api/java/: java_registrar.hpp
api/loader/: loader.cpp  loader.hpp  loader_module.cpp  loader_module.hpp  loader_module_holder.cpp  loader_module_holder.hpp
api/minecraft/: atomic_instance.hpp  event.hpp  minecraft.hpp
api/threading/: module_thread.hpp
api/util/win32/: dll_handler.hpp
test/: CMakeLists.txt  Makefile  test.cpp
test/include/: atomic_instance.hpp  minecraft.hpp
